Cache Integration; Shell improvements

--- a/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
+++ b/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
@@ -21,6 +21,7 @@ Log.FileLocation = osintgram-[date]-[time].txt
 ## On slower Network speeds, it is recommended to increase the Connection and Read Timeouts.
 Net.ConnectionTimeout = 30s
 Net.ReadTimeout = 15s
+Net.MaximumTries = 30
 
 ## Update related
 ## Available channels:
