--- a/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
+++ b/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
@@ -1,6 +1,6 @@
-## Application related
-App.CacheEnabled = true
-App.CacheExpirationTime = 3d
+## Time Formats
+Time.DateFormat = [day][month][year]
+Time.TimeFormat = [hour][minute][second]
 
 ## Color Themed related
 ColorTheme.HelpBlock = blue
@@ -24,6 +24,7 @@ Net.ReadTimeout = 15s
 Net.MaximumTries = 30
 
 ## Update related
+## If you have forked this repository, it is better to change the `SoftUpd.Url` value to your forked repository url.
 ## Available channels:
 # devel://master     -> The main codebase with untested to tested features on one machine
 # releases://pre     -> The pre-releases, with most of the features being tested
