--- a/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
+++ b/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
@@ -29,6 +29,7 @@ Net.MaximumTries = 30
 # devel://master     -> The main codebase with untested to tested features on one machine
 # releases://pre     -> The pre-releases, with most of the features being tested
 # releases://stable  -> The most stable release for the Application
-SoftUpd.UpdateCheck = false
+SoftUpd.UpdateCheck = true
+SoftUpd.AskForUpdate = true
 SoftUpd.Channel = devel://master
 SoftUpd.Url = https://github.com/BeChris100/osintgram4j
