--- a/src/net/bc100dev/osintgram4j/app_ver.cfg
+++ b/src/net/bc100dev/osintgram4j/app_ver.cfg
@@ -1,4 +1,14 @@
-BUILD_VERSION=debug_v1.0
-BUILD_VERSION_CODE=1
-BUILD_NAME=osintgram4j
-BUILD_FLAVOR=debug
+BUILD_VERSION = 0.1
+BUILD_VERSION_CODE = 1
+BUILD_NAME = osintgram4j
+BUILD_DISPLAY = OSINTgram
+
+## Available flavors:
+# debug = In Development State
+# release = The default GitHub Release
+# p_release = The default GitHub Pre-Release
+# arch_rel = Arch Linux Release Package
+# arch_rel_dev = Arch Linux Development Release Package
+# deb_rel = Debian Release Package
+# deb_rel_dev = Debian Development Release Package
+BUILD_FLAVOR = debug
