prepare for pre-release 1 (v0.1)

--- a/src/net/bc100dev/osintgram4j/app_ver.cfg
+++ b/src/net/bc100dev/osintgram4j/app_ver.cfg
@@ -1,7 +1,10 @@
-BUILD_VERSION = 0.1
-BUILD_VERSION_CODE = 1
-BUILD_NAME = osintgram4j
-BUILD_DISPLAY = OSINTgram
+# Due to Shell scripts hating the fact that spaces are not allowed,
+# you kind of need to deal with this.
+
+BUILD_VERSION=0.1
+BUILD_VERSION_CODE=1
+BUILD_NAME=osintgram4j
+BUILD_DISPLAY=OSINTgram
 
 ## Available flavors:
 # debug = In Development State
@@ -11,4 +14,4 @@ BUILD_DISPLAY = OSINTgram
 # arch_rel_dev = Arch Linux Development Release Package
 # deb_rel = Debian Release Package
 # deb_rel_dev = Debian Development Release Package
-BUILD_FLAVOR = debug
+BUILD_FLAVOR=debug
