--- a/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
+++ b/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
@@ -9,6 +9,7 @@ ColorTheme.Error = red
 ColorTheme.Warning = yellow
 ColorTheme.Verbose = black
 ColorTheme.Info = purple
+ColorTheme.Debug = gray
 
 ## Software Logging related
 Log.EnableLogging = false
