--- a/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
+++ b/src/net/bc100dev/osintgram4j/res/AppSettings.cfg
@@ -1,3 +1,6 @@
+## Application related
+App.AdminSecurityWarning = true
+
 ## Time Formats
 Time.DateFormat = [day][month][year]
 Time.TimeFormat = [hour][minute][second]
