--- a/cxx/CMakeLists.txt
+++ b/cxx/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.26)
+cmake_minimum_required(VERSION 3.10)
 project(osintgram4j_natives)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -7,7 +7,7 @@ include_directories("include/java_natives")
 
 if (${CMAKE_CXX_COMPILER} MATCHES "mingw" OR ${CMAKE_SYSTEM_NAME} MATCHES "win")
     include_directories("include/java_natives/win32")
-elseif (${CMAKE_CXX_COMPILER} MATCHES "linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "lin")
+elseif (${CMAKE_CXX_COMPILER} MATCHES "linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "nux")
     include_directories("include/java_natives/linux")
 endif ()
 
