--- a/src/net/bc100dev/osintgram4j/res/app_ver.cfg
+++ b/src/net/bc100dev/osintgram4j/res/app_ver.cfg
@@ -8,10 +8,6 @@ BUILD_DISPLAY=OSINTgram
 
 ## Available flavors:
 # debug = In Development State
-# release = The default GitHub Release
-# p_release = The default GitHub Pre-Release
-# arch_rel = Arch Linux Release Package
-# arch_rel_dev = Arch Linux Development Release Package
-# deb_rel = Debian Release Package
-# deb_rel_dev = Debian Development Release Package
+# release = Official and stable Release
+# p_release = Pointing towards a Pre-Release
 BUILD_FLAVOR=debug
