EE + Codebase Update

--- a/AppSettings.cfg
+++ b/AppSettings.cfg
@@ -3,7 +3,7 @@ App.AdminSecurityWarning = true
 App.Cache.RefreshInterval = 2d
 
 System.Linux.DefaultFileLocation = [home]/.config/BC100Dev/osintgram4j
-System.Windows.DefaultFileLocation = [home]\AppData\Local\BC100Dev
+System.Windows.DefaultFileLocation = [home]\AppData\Local\BC100Dev\osintgram4j
 System.Mac.DefaultFileLocation = [home]/Library/net.bc100dev/osintgram4j
 
 ## Time Formats
@@ -13,21 +13,6 @@ Time.DateFormat = [day].[month].[year]
 Time.TimeFormat = [hour]:[minute]:[second]
 # Use of 12-hour Time format
 Time.T12Format = false
-
-## Software Logging related
-# Enables (true) or disables (false) file logging.
-Logging.Enabled = true
-# The specific levels of logging, when writing Logs to the file
-# These include Information (inf), Errors (err), Warnings (wrn), Debug (dbg) and Verbose Logging (vrb).
-# To disable, either pass "none" or disable "Logging.Enabled" value.
-Logging.Levels = inf,err,wrn,dbg,vrb
-# Log Entry for each line
-Logging.EntryFormat = [type] [date]-[time] ([tag]): [message]
-# The naming scheme of the File that gets logged.
-# Date ("[date]") and Time ("[time]") Formatting supported
-Logging.FileNamingScheme = LogFile-[date]-[time].txt
-# The maximum amount of files stored in the Application Configuration directory
-Logging.MaxFileLogs = 15
 
 ## Network related
 # Timeout: The Maximum duration of one connection
