Bugfix #7: Use of absolute paths for the settings file

--- a/AppSettings.cfg
+++ b/AppSettings.cfg
@@ -1,18 +1,18 @@
-## Application related
-App.AdminSecurityWarning = true
-App.Cache.RefreshInterval = 2d
+# Enables the Security Warnings, such as Administrative checks.
+# Enabled (true) by default
+SecurityWarnings = true
 
-System.Linux.DefaultFileLocation = [home]/.config/BC100Dev/osintgram4j
-System.Windows.DefaultFileLocation = [home]\AppData\Local\BC100Dev\osintgram4j
-System.Mac.DefaultFileLocation = [home]/Library/net.bc100dev/osintgram4j
+# Refreshes the cache after specific duration, when no Internet
+# connection is available. 2 days (2d) by default.
+CacheRefreshInterval = 2d
 
-## Time Formats
-# Date format, shown in the contents of the Log Files
-Time.DateFormat = [day].[month].[year]
-# Time format, shown in the contents of the Log Files
-Time.TimeFormat = [hour]:[minute]:[second]
-# Use of 12-hour Time format
-Time.T12Format = false
+# Specifies the default configuration store path. It is globally
+# accessible from the Home path, for example, C:\Users\YourUsername,
+# /home/user or /Users/YourUser. Specific values like [home] will be
+# automatically modified during Runtime.
+DefaultFileLocation.Win64 = [home]\AppData\Local\net.bc100dev\osintgram4j
+DefaultFileLocation.Linux = [home]/.config/net.bc100dev/osintgram4j
+DefaultFileLocation.MacOS = [home]/Library/net.bc100dev/osintgram4j
 
 ## Network related
 # Timeout: The Maximum duration of one connection
@@ -23,3 +23,8 @@ Network.MaximumTries = 30
 # The maximum allowed Session list
 # Increasing might increase Network Bandwidth
 Network.MaximumSessions = 5
+
+## Instagram Connectivity related
+# Specifies, how many accounts (that you own) you can log into
+Instagram.Accounts.MaximumConnections = 1
+Instagram.Accounts.MaximumSessions = 5
