Codebase Update + Native Shell Integration

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,5 @@ bin/
 build
 cmdline
 apprun.sh
-ee.txt
-src/net/bc100dev/osintgram4j/TestMain.java
+src/net/bc100dev/osintgram4j/test
+gen-headers.sh
