--- a/src/net/bc100dev/osintgram4j/res/app_ver.cfg
+++ b/src/net/bc100dev/osintgram4j/res/app_ver.cfg
@@ -1,13 +1,17 @@
-# Due to Shell scripts hating the fact that spaces are not allowed,
-# you kind of need to deal with this.
-
 BUILD_VERSION=0.1
 BUILD_VERSION_CODE=1
 BUILD_NAME=osintgram4j
 BUILD_DISPLAY=OSINTgram
 
-## Available flavors:
-# debug = In Development State
-# release = Official and stable Release
-# p_release = Pointing towards a Pre-Release
 BUILD_FLAVOR=debug
+BUILD_DISPLAY_FLAVOR=Development
+
+# Image type
+# ghm = GitHub Master Branch Image
+# ghr = GitHub Release Image
+# lr-al = Linux Release - Arch Linux
+# lr-db = Linux Release - Debian
+# lr-pt = Linux Release - Portable
+# w64-is = Windows x64 - Installed
+# w64-pt = Windows x64 - Portable
+BUILD_IMAGE=ghm
