--- a/cxx/CMakeLists.txt
+++ b/cxx/CMakeLists.txt
@@ -5,6 +5,10 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories("include/java_natives")
 
+if (${CMAKE_CXX_COMPILER} MATCHES "linux")
+    find_package(Curses REQUIRED)
+endif ()
+
 if (${CMAKE_CXX_COMPILER} MATCHES "mingw" OR ${CMAKE_SYSTEM_NAME} MATCHES "win")
     include_directories("include/java_natives/win32")
 elseif (${CMAKE_CXX_COMPILER} MATCHES "linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "nux")
@@ -16,11 +20,15 @@ add_library(osintgram4j-cxx SHARED
         src/UserIO.cpp src/UserIO.h
         src/ExceptionHandle.cpp src/ExceptionHandle.h
         src/MemoryInfo.cpp src/MemoryInfo.h
-        src/shell/Terminal.cpp
-)
+        src/shell/Terminal.cpp)
 
 # Windows on Linux compilation
 if (${CMAKE_CXX_COMPILER} MATCHES "mingw" OR ${CMAKE_SYSTEM_NAME} MATCHES "win")
     set_target_properties(osintgram4j-cxx PROPERTIES PREFIX "")
     set_target_properties(osintgram4j-cxx PROPERTIES SUFFIX ".dll")
+endif ()
+
+if (${CMAKE_CXX_COMPILER} MATCHES "linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "nux")
+    target_include_directories(osintgram4j-cxx PRIVATE ${CURSES_INCLUDE_PATH})
+    target_link_libraries(osintgram4j-cxx PRIVATE ${CURSES_LIBRARIES})
 endif ()
