--- a/cxx/CMakeLists.txt
+++ b/cxx/CMakeLists.txt
@@ -5,30 +5,20 @@ set(CMAKE_CXX_STANDARD 17)
 
 include_directories("include/java_natives")
 
-if (${CMAKE_CXX_COMPILER} MATCHES "linux")
-    find_package(Curses REQUIRED)
-endif ()
-
 if (${CMAKE_CXX_COMPILER} MATCHES "mingw" OR ${CMAKE_SYSTEM_NAME} MATCHES "win")
     include_directories("include/java_natives/win32")
 elseif (${CMAKE_CXX_COMPILER} MATCHES "linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "nux")
     include_directories("include/java_natives/linux")
 endif ()
 
-add_library(osintgram4j-cxx SHARED
+add_library(osintgram4j SHARED
         src/ConsoleSize.cpp src/ConsoleSize.h
         src/UserIO.cpp src/UserIO.h
         src/ExceptionHandle.cpp src/ExceptionHandle.h
-        src/MemoryInfo.cpp src/MemoryInfo.h
-        src/shell/Terminal.cpp)
+        src/MemoryInfo.cpp src/MemoryInfo.h)
 
 # Windows on Linux compilation
 if (${CMAKE_CXX_COMPILER} MATCHES "mingw" OR ${CMAKE_SYSTEM_NAME} MATCHES "win")
-    set_target_properties(osintgram4j-cxx PROPERTIES PREFIX "")
-    set_target_properties(osintgram4j-cxx PROPERTIES SUFFIX ".dll")
-endif ()
-
-if (${CMAKE_CXX_COMPILER} MATCHES "linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "nux")
-    target_include_directories(osintgram4j-cxx PRIVATE ${CURSES_INCLUDE_PATH})
-    target_link_libraries(osintgram4j-cxx PRIVATE ${CURSES_LIBRARIES})
+    set_target_properties(osintgram4j PROPERTIES PREFIX "")
+    set_target_properties(osintgram4j PROPERTIES SUFFIX ".dll")
 endif ()
