--- a/AppSettings.cfg
+++ b/AppSettings.cfg
@@ -1,22 +1,44 @@
+# Default Store/Cache Location:
+# Windows: C:\Users\Username\AppData\Local\BC100Dev\Osintgram4j
+# Linux: /home/username/.config/net.bc100dev/osintgram4j
+# macOS: /Users/Username/Library/net.bc100dev/osintgram4j
+
 # Enables the Security Warnings, such as Administrative checks.
 # Enabled (true) by default
 SecurityWarnings = true
 
-# Refreshes the cache after specific duration, when no Internet
-# connection is available. 2 days (2d) by default.
-CacheRefreshInterval = 2d
+# Allows the use of Cache within a specific interval time. Cache is always updated,
+# when Internet connection is available. Default is 15 days (15d). Minimum is 2 days (2d)
+# up to 2 months (2m).
+CacheMaxInterval = 15d
 
-## Network related
+# The device refresh values
+# If AlwaysUpdate is enabled, it will always check for the latest updates.
+# Otherwise, it will check only on specific intervals.
+# In defaults case, it will check every 3 days (3d) upon next Application launch.
+DeviceRefresh.AlwaysUpdate = true
+DeviceRefresh.UpdateInterval = 3d
+
 # Timeout: The Maximum duration of one connection
 # On slower Network speeds, it is recommended to increase the Connection and Read Timeouts.
 Network.ConnectionTimeout = 30s
 Network.ReadTimeout = 15s
-Network.MaximumTries = 30
-# The maximum allowed Session list
-# Increasing might increase Network Bandwidth
-Network.MaximumSessions = 5
+Network.MaximumTries = 5
+
+# The maximum count of connections allowed at once
+# Increasing the value might increase the Network Bandwidth
+Network.MaximumConnections = 3
 
 ## Instagram Connectivity related
-# Specifies, how many accounts (that you own) you can log into
+# Specifies, how many accounts (that you own) you can log into and how many targets you can apply at once
 Instagram.Accounts.MaximumConnections = 1
-Instagram.Accounts.MaximumSessions = 5
+Instagram.Accounts.MaximumSessions = 1
+
+## Write options
+# When "AlwaysWriteToFile" is enabled, it will write all output to their specific files.
+# Supported file types are Text files (txt), JSON files (json) and XML files (xml).
+# They can be written to the Standard Configuration Location ("standard"; e.g. Linux: "/home/user/.config/net.bc100dev/osintgram4j"),
+# to the current working directory ("pwd" or "cwd"), or to a specific location given by its value.
+Osintgram4j.AlwaysWriteToFile = false
+Osintgram4j.FileType = txt
+Osintgram4j.WriteLocation = standard
