--- a/AppSettings.cfg
+++ b/AppSettings.cfg
@@ -3,14 +3,43 @@
 # Linux: /home/username/.config/net.bc100dev/osintgram4j
 # macOS: /Users/Username/Library/net.bc100dev/osintgram4j
 
+# Honest Edition
+# Like a piece of software being honest, and replace any message with
+# humor-related content?
+# If yes, enable it.
+HonestyEdition = false
+
 # Enables the Security Warnings, such as Administrative checks.
-# Enabled (true) by default
+# Enabled (true) by default. Mods use the same privileges, as the program itself.
 SecurityWarnings = true
+
+# Enables the use of Modding APIs for external JAR files outside of the core
+# application (Osintgram4j) itself.
+ModdingEnabled = false
+
+# Disables the external mod JAR files, when the Application is running with Administrative/Root
+# privileges. Recommended to let this stay on true.
+# !! WARNING !!
+# If someone tells you to disable it, it is very likely a SCAM or MALWARE being delivered.
+# It is recommended to let this enabled, unless you know EXACTLY, what you are doing.
+DisableModsOnAdministration = true
+
+# Allows the execution of this software, even with tampered core application files.
+# Not recommended, when you did not allow the core application to be modified.
+# Use at your own risk.
+TamperedExecution = false
 
 # Allows the use of Cache within a specific interval time. Cache is always updated,
 # when Internet connection is available. Default is 15 days (15d). Minimum is 2 days (2d)
 # up to 2 months (2m).
 CacheMaxInterval = 15d
+
+# Allows the use of Cache with specific accounts, with its specific maximum time.
+# Cache is always updated, when Internet connection is available. Default is 15 days (15d).
+# Minimum interval is 2 days (2d) up to 2 months (2m). Changing the maximum interval
+# time will require cache to be updated, requiring an internet connection.
+Cache.Enabled = true
+Cache.MaxInterval = 15d
 
 # The device refresh values
 # If AlwaysUpdate is enabled, it will always check for the latest updates.
@@ -32,13 +61,37 @@ Network.MaximumConnections = 3
 ## Instagram Connectivity related
 # Specifies, how many accounts (that you own) you can log into and how many targets you can apply at once
 Instagram.Accounts.MaximumConnections = 1
-Instagram.Accounts.MaximumSessions = 1
+Instagram.Accounts.MaximumSessions = 3
+
+# The Login/Connection ID is like an Authentication Token. Specifies, after what duration
+# the token expires. Each Token is specified to its date, meaning changing the date after Token Creation
+# does not affect the token, but updates them instead. Cookies may override the value.
+Instagram.LoginUserID.TokenExpire = 5d
 
 ## Write options
 # When "AlwaysWriteToFile" is enabled, it will write all output to their specific files.
 # Supported file types are Text files (txt), JSON files (json) and XML files (xml).
 # They can be written to the Standard Configuration Location ("standard"; e.g. Linux: "/home/user/.config/net.bc100dev/osintgram4j"),
 # to the current working directory ("pwd" or "cwd"), or to a specific location given by its value.
+# Can be modified at runtime by doing "&Osintgram4j.WriteToFile = true" (temporary action)
 Osintgram4j.AlwaysWriteToFile = false
 Osintgram4j.FileType = txt
 Osintgram4j.WriteLocation = standard
+
+## Update settings
+# Checks for updates, when there are any.
+# If there is a new update, it will do its specific action, which either
+# "display" -> displays the update information on startup
+# "download" -> downloads the software, but does not apply them
+# "immediate" -> downloads the software and applies them immediately
+Osintgram4j.SoftwareUpdatesCheck = false
+Osintgram4j.SoftwareUpdatesAction = display
+Osintgram4j.RemoteUrl = https://api.github.com/repos/BeChris100/osintgram4j/releases
+
+## Autostart Options
+# For automatic login, you enable the "AutoLogin" to true, letting a login happen on each startup
+# without having to manually type `user-manager` every time.
+# To automatically establish a connection to a session on startup, you enable "EstablishSession" to true,
+# which will take in parameters of the command that you run (e.g. `osintgram4j example_username`)
+Autostart.EstablishSession = false
+Autostart.AutoLogin = false
