--- a/cxx/CMakeLists.txt
+++ b/cxx/CMakeLists.txt
@@ -3,19 +3,22 @@ project(osintgram4j_natives)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories("include/java_natives")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
+
+include_directories("include")
 
 if (${CMAKE_CXX_COMPILER} MATCHES "mingw" OR ${CMAKE_SYSTEM_NAME} MATCHES "win")
-    include_directories("include/java_natives/win32")
+    include_directories("include/win32")
 elseif (${CMAKE_CXX_COMPILER} MATCHES "linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "nux")
-    include_directories("include/java_natives/linux")
+    include_directories("include/linux")
 endif ()
 
 add_library(osintgram4j SHARED
-        src/ConsoleSize.cpp src/ConsoleSize.h
-        src/UserIO.cpp src/UserIO.h
-        src/ExceptionHandle.cpp src/ExceptionHandle.h
-        src/MemoryInfo.cpp src/MemoryInfo.h)
+        src/ConsoleSize.cpp
+        src/UserIO.cpp
+        src/ExceptionHandle.cpp
+        src/MemoryInfo.cpp)
 
 # Windows on Linux compilation
 if (${CMAKE_CXX_COMPILER} MATCHES "mingw" OR ${CMAKE_SYSTEM_NAME} MATCHES "win")
