Codebase Update + update docs (refer #16 for update)

--- a/AppSettings.cfg
+++ b/AppSettings.cfg
@@ -4,8 +4,7 @@
 # macOS: /Users/Username/Library/net.bc100dev/osintgram4j
 
 # Honest Edition
-# Like a piece of software being honest, and replace any message with
-# humor-related content?
+# Like a piece of software being honest, and replace any message with humor-related content?
 # If yes, enable it.
 HonestyEdition = false
 
