Modding Integration + Codebase Update

--- a/AppSettings.cfg
+++ b/AppSettings.cfg
@@ -23,6 +23,15 @@ ModdingEnabled = false
 # It is recommended to let this enabled, unless you know EXACTLY, what you are doing.
 DisableModsOnAdministration = true
 
+# Disables the external mod JAR files, when the Application was built, or its binaries changed
+# permission levels from regular to SetUID/SetGID permissions. These permissions have security
+# implications, and external mod JAR files can initiate a SetUID/SetGID change, allowing Root
+# execution. Recommended to let it stay enabled (true).
+# !! WARNING !!
+# If someone tells you to disable it, it is very likely a SCAM or MALWARE being delivered.
+# It is recommended to let this enabled, unless you know EXACTLY, what you are doing.
+DisableModsOnUidChange = true
+
 # Allows the execution of this software, even with tampered core application files.
 # Not recommended, when you did not allow the core application to be modified.
 # Use at your own risk.
